--- a/EMUUSBAudio/EMUUSBAudio-Info.plist
+++ b/EMUUSBAudio/EMUUSBAudio-Info.plist
@@ -2,6 +2,248 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>IOKitPersonalities</key>
+	<dict>
+		<key>EMUSBAudioTrackerPre</key>
+		<dict>
+			<key>CFBundleIdentifier</key>
+			<string>com.emu.driver.EMUUSBAudio</string>
+			<key>IOClass</key>
+			<string>EMUUSBAudioDevice</string>
+			<key>IOProviderClass</key>
+			<string>IOUSBInterface</string>
+			<key>IOUserClientClass</key>
+			<string>EMUUSBUserClient</string>
+			<key>SafetyOffset</key>
+			<integer>192</integer>
+			<key>bConfigurationValue</key>
+			<integer>1</integer>
+			<key>bInterfaceNumber</key>
+			<integer>0</integer>
+			<key>bcdDevice</key>
+			<integer>256</integer>
+			<key>idProduct</key>
+			<integer>16138</integer>
+			<key>idVendor</key>
+			<integer>1054</integer>
+		</dict>
+		<key>EMUUSBAudioControl02</key>
+		<dict>
+			<key>CFBundleIdentifier</key>
+			<string>com.emu.driver.EMUUSBAudio</string>
+			<key>IOAudioEngineChannelCategoryNames</key>
+			<dict>
+				<key>InputChannel1</key>
+				<string>Analog In</string>
+				<key>InputChannel2</key>
+				<string>Analog In</string>
+				<key>OutputChannel1</key>
+				<string>Analog Out</string>
+				<key>OutputChannel2</key>
+				<string>Analog Out</string>
+			</dict>
+			<key>IOAudioEngineChannelNames</key>
+			<dict>
+				<key>InputChannel1</key>
+				<string>Analog In 1</string>
+				<key>InputChannel2</key>
+				<string>Analog In 2</string>
+				<key>OutputChannel1</key>
+				<string>Analog Out 1</string>
+				<key>OutputChannel2</key>
+				<string>Analog Out 2</string>
+			</dict>
+			<key>IOAudioEngineChannelNumberNames</key>
+			<dict>
+				<key>InputChannel1</key>
+				<string>1</string>
+				<key>InputChannel2</key>
+				<string>2</string>
+				<key>OutputChannel1</key>
+				<string>1</string>
+				<key>OutputChannel2</key>
+				<string>2</string>
+			</dict>
+			<key>IOClass</key>
+			<string>EMUUSBAudioDevice</string>
+			<key>IOProviderClass</key>
+			<string>IOUSBInterface</string>
+			<key>IOUserClientClass</key>
+			<string>EMUUSBUserClient</string>
+			<key>SafetyOffset</key>
+			<integer>192</integer>
+			<key>TransportTypeOverride</key>
+			<integer>1</integer>
+			<key>bConfigurationValue</key>
+			<integer>1</integer>
+			<key>bInterfaceNumber</key>
+			<integer>0</integer>
+			<key>bcdDevice</key>
+			<integer>256</integer>
+			<key>idProduct</key>
+			<integer>16130</integer>
+			<key>idVendor</key>
+			<integer>1054</integer>
+		</dict>
+		<key>EMUUSBAudioControl0204</key>
+		<dict>
+			<key>CFBundleIdentifier</key>
+			<string>com.emu.driver.EMUUSBAudio</string>
+			<key>IOAudioEngineChannelCategoryNames</key>
+			<dict>
+				<key>InputChannel1</key>
+				<string>Analog In</string>
+				<key>InputChannel2</key>
+				<string>Analog In</string>
+				<key>OutputChannel1</key>
+				<string>Analog Out</string>
+				<key>OutputChannel2</key>
+				<string>Analog Out</string>
+				<key>OutputChannel3</key>
+				<string>Analog Out</string>
+				<key>OutputChannel4</key>
+				<string>Analog Out</string>
+			</dict>
+			<key>IOAudioEngineChannelNames</key>
+			<dict>
+				<key>InputChannel1</key>
+				<string>Analog In 1</string>
+				<key>InputChannel2</key>
+				<string>Analog In 2</string>
+				<key>OutputChannel1</key>
+				<string>Analog Out 1</string>
+				<key>OutputChannel2</key>
+				<string>Analog Out 2</string>
+				<key>OutputChannel3</key>
+				<string>Analog Out 3</string>
+				<key>OutputChannel4</key>
+				<string>Analog Out 4</string>
+			</dict>
+			<key>IOAudioEngineChannelNumberNames</key>
+			<dict>
+				<key>InputChannel1</key>
+				<string>1</string>
+				<key>InputChannel2</key>
+				<string>2</string>
+				<key>OutputChannel1</key>
+				<string>1</string>
+				<key>OutputChannel2</key>
+				<string>2</string>
+				<key>OutputChannel3</key>
+				<string>1</string>
+				<key>OutputChannel4</key>
+				<string>2</string>
+			</dict>
+			<key>IOClass</key>
+			<string>EMUUSBAudioDevice</string>
+			<key>IOProviderClass</key>
+			<string>IOUSBInterface</string>
+			<key>IOUserClientClass</key>
+			<string>EMUUSBUserClient</string>
+			<key>SafetyOffset</key>
+			<integer>192</integer>
+			<key>TransportTypeOverride</key>
+			<integer>1</integer>
+			<key>bConfigurationValue</key>
+			<integer>1</integer>
+			<key>bHasSPDIFClock</key>
+			<integer>0</integer>
+			<key>bInterfaceNumber</key>
+			<integer>0</integer>
+			<key>bcdDevice</key>
+			<integer>256</integer>
+			<key>idProduct</key>
+			<integer>16153</integer>
+			<key>idVendor</key>
+			<integer>1054</integer>
+		</dict>
+		<key>EMUUSBAudioControl04</key>
+		<dict>
+			<key>CFBundleIdentifier</key>
+			<string>com.emu.driver.EMUUSBAudio</string>
+			<key>IOAudioEngineChannelCategoryNames</key>
+			<dict>
+				<key>InputChannel1</key>
+				<string>Analog In</string>
+				<key>InputChannel2</key>
+				<string>Analog In</string>
+				<key>InputChannel3</key>
+				<string>SPDIF In</string>
+				<key>InputChannel4</key>
+				<string>SPDIF In</string>
+				<key>OutputChannel1</key>
+				<string>Analog Out</string>
+				<key>OutputChannel2</key>
+				<string>Analog Out</string>
+				<key>OutputChannel3</key>
+				<string>SPDIF Out</string>
+				<key>OutputChannel4</key>
+				<string>SPDIF Out</string>
+			</dict>
+			<key>IOAudioEngineChannelNames</key>
+			<dict>
+				<key>InputChannel1</key>
+				<string>Analog In 1</string>
+				<key>InputChannel2</key>
+				<string>Analog In 2</string>
+				<key>InputChannel3</key>
+				<string>SPDIF In 1</string>
+				<key>InputChannel4</key>
+				<string>SPDIF In 2</string>
+				<key>OutputChannel1</key>
+				<string>Analog Out 1</string>
+				<key>OutputChannel2</key>
+				<string>Analog Out 2</string>
+				<key>OutputChannel3</key>
+				<string>SPDIF Out 1</string>
+				<key>OutputChannel4</key>
+				<string>SPDIF Out 2</string>
+			</dict>
+			<key>IOAudioEngineChannelNumberNames</key>
+			<dict>
+				<key>InputChannel1</key>
+				<string>1</string>
+				<key>InputChannel2</key>
+				<string>2</string>
+				<key>InputChannel3</key>
+				<string>1</string>
+				<key>InputChannel4</key>
+				<string>2</string>
+				<key>OutputChannel1</key>
+				<string>1</string>
+				<key>OutputChannel2</key>
+				<string>2</string>
+				<key>OutputChannel3</key>
+				<string>1</string>
+				<key>OutputChannel4</key>
+				<string>2</string>
+			</dict>
+			<key>IOClass</key>
+			<string>EMUUSBAudioDevice</string>
+			<key>IOProviderClass</key>
+			<string>IOUSBInterface</string>
+			<key>IOUserClientClass</key>
+			<string>EMUUSBUserClient</string>
+			<key>TransportTypeOverride</key>
+			<integer>1</integer>
+			<key>bConfigurationValue</key>
+			<integer>1</integer>
+			<key>bHasSPDIFClock</key>
+			<integer>1</integer>
+			<key>bInterfaceNumber</key>
+			<integer>0</integer>
+			<key>bcdDevice</key>
+			<integer>256</integer>
+			<key>idProduct</key>
+			<integer>16132</integer>
+			<key>idVendor</key>
+			<integer>1054</integer>
+		</dict>
+	</dict>
+	<key>CFBundleDisplayName</key>
+	<string></string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -9,7 +251,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.emu.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.emu.driver.EMUUSBAudio</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -17,14 +259,25 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.4.0</string>
 	<key>CFBundleSignature</key>
-	<string>????</string>
+	<string>EMUU</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2014 com.emu. All rights reserved.</string>
 	<key>OSBundleLibraries</key>
-	<dict/>
+	<dict>
+		<key>com.apple.iokit.IOAudioFamily</key>
+		<string>1.9.7f2</string>
+		<key>com.apple.iokit.IOUSBFamily</key>
+		<string>683.4</string>
+		<key>com.apple.kpi.iokit</key>
+		<string>13.4</string>
+		<key>com.apple.kpi.libkern</key>
+		<string>13.4</string>
+		<key>com.apple.kpi.mach</key>
+		<string>13.4</string>
+	</dict>
 </dict>
 </plist>
