--- a/src/EMUUSBAudio/EMUUSBAudio-Info.plist
+++ b/src/EMUUSBAudio/EMUUSBAudio-Info.plist
@@ -14,8 +14,8 @@
 			<string>IOUSBInterface</string>
 			<key>IOUserClientClass</key>
 			<string>EMUUSBUserClient</string>
-			<key>SafetyOffset</key>
-			<integer>192</integer>
+			<key>SafetyOffsetMicroSec</key>
+			<integer>4200</integer>
 			<key>bConfigurationValue</key>
 			<integer>1</integer>
 			<key>bInterfaceNumber</key>
@@ -70,8 +70,8 @@
 			<string>IOUSBInterface</string>
 			<key>IOUserClientClass</key>
 			<string>EMUUSBUserClient</string>
-			<key>SafetyOffset</key>
-			<integer>192</integer>
+			<key>SafetyOffsetMicroSec</key>
+			<integer>4200</integer>
 			<key>TransportTypeOverride</key>
 			<integer>1</integer>
 			<key>bConfigurationValue</key>
@@ -140,8 +140,8 @@
 			<string>IOUSBInterface</string>
 			<key>IOUserClientClass</key>
 			<string>EMUUSBUserClient</string>
-			<key>SafetyOffset</key>
-			<integer>192</integer>
+			<key>SafetyOffsetMicroSec</key>
+			<integer>4200</integer>
 			<key>TransportTypeOverride</key>
 			<integer>1</integer>
 			<key>bConfigurationValue</key>
@@ -159,6 +159,8 @@
 		</dict>
 		<key>EMUUSBAudioControl04</key>
 		<dict>
+			<key>SafetyOffsetMicroSec</key>
+			<integer>4200</integer>
 			<key>CFBundleIdentifier</key>
 			<string>com.emu.driver.EMUUSBAudio</string>
 			<key>IOAudioEngineChannelCategoryNames</key>
