--- a/src/EMUUSBAudio/EMUUSBAudio-Info.plist
+++ b/src/EMUUSBAudio/EMUUSBAudio-Info.plist
@@ -261,13 +261,13 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.4.0</string>
+	<string>3.4.0</string>
 	<key>CFBundleSignature</key>
 	<string>EMUU</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>3.4.0</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2014 com.emu. All rights reserved.</string>
+	<string>Copyright © 2015 com.emu &amp; W.Pasman</string>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>com.apple.iokit.IOAudioFamily</key>
