--- a/EMUUSBAudio.kext/Contents/Info.plist
+++ b/EMUUSBAudio.kext/Contents/Info.plist
@@ -19,11 +19,11 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>3.5.2</string>
+	<string>3.5.3</string>
 	<key>CFBundleSignature</key>
 	<string>EMUU</string>
 	<key>CFBundleVersion</key>
-	<string>3.5.2</string>
+	<string>3.5.3</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
@@ -62,6 +62,10 @@
 			<integer>16138</integer>
 			<key>idVendor</key>
 			<integer>1054</integer>
+			<key>latencyADC</key>
+			<integer>53</integer>
+			<key>latencyDAC</key>
+			<integer>15</integer>
 		</dict>
 		<key>EMUUSBAudioControl02</key>
 		<dict>
@@ -120,6 +124,10 @@
 			<integer>16130</integer>
 			<key>idVendor</key>
 			<integer>1054</integer>
+			<key>latencyADC</key>
+			<integer>53</integer>
+			<key>latencyDAC</key>
+			<integer>15</integer>
 		</dict>
 		<key>EMUUSBAudioControl0204</key>
 		<dict>
@@ -192,6 +200,10 @@
 			<integer>16153</integer>
 			<key>idVendor</key>
 			<integer>1054</integer>
+			<key>latencyADC</key>
+			<integer>53</integer>
+			<key>latencyDAC</key>
+			<integer>15</integer>
 		</dict>
 		<key>EMUUSBAudioControl04</key>
 		<dict>
@@ -276,6 +288,10 @@
 			<integer>16132</integer>
 			<key>idVendor</key>
 			<integer>1054</integer>
+			<key>latencyADC</key>
+			<integer>53</integer>
+			<key>latencyDAC</key>
+			<integer>38</integer>
 		</dict>
 	</dict>
 	<key>LSApplicationCategoryType</key>
