--- a/src/EMUUSBAudio/EMUUSBAudio-Info-11.plist
+++ b/src/EMUUSBAudio/EMUUSBAudio-Info-11.plist
@@ -277,13 +277,13 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>3.5.5</string>
+	<string>4.0.0</string>
 	<key>CFBundleSignature</key>
 	<string>EMUU</string>
 	<key>CFBundleVersion</key>
-	<string>3.5.5</string>
+	<string>4.0.0</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2015 com.emu &amp; W.Pasman</string>
+	<string>Copyright © 2016 W.Pasman</string>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>com.apple.iokit.IOAudioFamily</key>
